Massive update: context fixed